--- a/index.html
+++ b/index.html
@@ -14,25 +14,6 @@
       gtag('config', 'UA-161234972-2');
     </script>
 
-    <!-- Facebook Pixel Code -->
-          <script>
-          !function(f,b,e,v,n,t,s)
-          {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-          n.queue=[];t=b.createElement(e);t.async=!0;
-          t.src=v;s=b.getElementsByTagName(e)[0];
-          s.parentNode.insertBefore(t,s)}(window,document,'script',
-          'https://connect.facebook.net/en_US/fbevents.js');
-           fbq('init', '825997527881319');
-          fbq('track', 'PageView');
-          </script>
-          <noscript>
-           <img height="1" width="1"
-          src="https://www.facebook.com/tr?id=825997527881319&ev=PageView
-          &noscript=1"/>
-          </noscript>
-<!-- End Facebook Pixel Code -->
 
 
     <meta charset="utf-8">
@@ -40,8 +21,10 @@
   </head>
   <body>
 
+
+
     <a href="bastachesenti.html">Basta Che Senti</a>
-    <p>Ciao a tutti!</p>
+    <p>Ciao a tutti quanti!</p>
 
   </body>
 </html>
