--- a/bastachesenti.html
+++ b/bastachesenti.html
@@ -80,7 +80,7 @@
         <p>Listen on: </p>
         <i class="fas fa-chevron-down"></i>
       </div>
-      <a class="intDivLink" id="link1" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w" target="_blank" onclick="captureOutboundLink('https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w'); return false;">
+      <a class="intDivLink" id="link1" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w"  onclick="captureOutboundLink('https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w'); return false;">
         <div class="iconSrteam">
           <img src="img/spotify.png" alt="">
         </div>
