--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-    <a href="bastachesenti.html" onclick="ga(‘send’, ‘event’, [link], [click], [bastaCheSenti]);">Basta Che Senti</a>
+    <a href="https://instagram.com" onclick="ga(‘send’, ‘event’, [link], [click], [bastaCheSenti]);">Basta Che Senti</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
