--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 
 
-    <a href="https://instagram.com" onclick="ga(‘send’, ‘event’, [link], [click], [bastaCheSenti]);">Basta Che Senti</a>
+    <a href="https://facebook.com" onclick="gtag('event', <click>, {
+  'event_category': 'link',
+  'event_label': 'bastaCheSenti',
+  'value': 'value'
+});">Basta Che Senti</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
