--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
 
 
-    <a href="https://facebook.com" onclick="gtag('event', <click>, {
+    <a href="https://instagram.com" onclick="gtag('event', 'click', {
   'event_category': 'link',
   'event_label': 'bastaCheSenti',
-  'value': 'value'
-});">Basta Che Senti</a>
+  });">Basta Che Senti</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
