--- a/bastachesenti.html
+++ b/bastachesenti.html
@@ -80,37 +80,55 @@
         <p>Listen on: </p>
         <i class="fas fa-chevron-down"></i>
       </div>
-      <a class="intDivLink" id="link1" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w" >
+      <a class="intDivLink" id="link1" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'spotify',
+    });">
         <div class="iconSrteam">
           <img src="img/spotify.png" alt="">
         </div>
       </a>
 
-      <a class="intDivLink" id="link2" href="https://music.apple.com/it/album/basta-che-senti/1500668204?i=1500668205" target="_blank" >
+      <a class="intDivLink" id="link2" href="https://music.apple.com/it/album/basta-che-senti/1500668204?i=1500668205" target="_blank" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'appleMusic',
+    });">
         <div class="iconSrteam">
           <img src="img/appleMusic.png" alt="">
         </div>
       </a>
 
-      <a class="intDivLink" id="link3" target="_blank" href="https://music.amazon.it/albums/B085885BXH?ref=dm_sh_k6OePgoOV91NOiUa6u2lck3QO" >
+      <a class="intDivLink" id="link3" target="_blank" href="https://music.amazon.it/albums/B085885BXH?ref=dm_sh_k6OePgoOV91NOiUa6u2lck3QO" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'amazonMusic',
+    });">
         <div class="iconSrteam">
           <img src="img/amazonMusic.png" alt="">
         </div>
       </a>
 
-      <a class="intDivLink" id="link6" target="_blank" href="https://www.youtube.com/watch?v=F1CKN2J1Z_M" >
+      <a class="intDivLink" id="link6" target="_blank" href="https://www.youtube.com/watch?v=F1CKN2J1Z_M" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'youTube',
+    });">
         <div class="iconSrteam">
           <img src="img/youTube.png" alt="">
         </div>
       </a>
 
-      <a class="intDivLink" id="link4" target="_blank" href="https://play.google.com/store/music/album?id=Bpsmly2njxbhpldhmtl4mzfyywi&tid=song-Tume6f2hxgr2qmuu6pm74ijizie&gl=IT" >
+      <a class="intDivLink" id="link4" target="_blank" href="https://play.google.com/store/music/album?id=Bpsmly2njxbhpldhmtl4mzfyywi&tid=song-Tume6f2hxgr2qmuu6pm74ijizie&gl=IT" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'googlePlayMusic',
+    });">
         <div class="iconSrteam">
           <img src="img/googlePlayMusic.png" alt="">
         </div>
       </a>
 
-      <a class="intDivLink" id="link5" target="_blank" href="https://music.apple.com/it/album/basta-che-senti/1500668204?i=1500668205&app=itunes" >
+      <a class="intDivLink" id="link5" target="_blank" href="https://music.apple.com/it/album/basta-che-senti/1500668204?i=1500668205&app=itunes" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'iTunes',
+    });">
         <div class="iconSrteam">
           <img src="img/iTunes.png" alt="">
         </div>
