--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-    <a href="https://instagram.com" onclick="gtag('event', 'click', {
+    <a href="bastachesenti.html" onclick="gtag('event', 'click', {
   'event_category': 'link',
   'event_label': 'bastaCheSenti',
   });">Basta Che Senti</a>
