--- a/bastachesenti.html
+++ b/bastachesenti.html
@@ -80,7 +80,7 @@
         <p>Listen on: </p>
         <i class="fas fa-chevron-down"></i>
       </div>
-      <a class="intDivLink" id="link1" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link1" target="_blank" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'spotify',
     });">
