--- a/bastachesenti.html
+++ b/bastachesenti.html
@@ -142,8 +142,14 @@
 
       <p>Follow on:</p>
 
-       <a href="https://www.instagram.com/famosopostumo/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/famosopostumo/" target="_blank"><i class="fab fa-facebook"></i></a>
+       <a href="https://www.instagram.com/famosopostumo/?hl=it" target="_blank" onclick="gtag('event', 'click', {
+     'event_category': 'link',
+     'event_label': 'instagram',
+     });"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/famosopostumo/" target="_blank" onclick="gtag('event', 'click', {
+    'event_category': 'link',
+    'event_label': 'facebook',
+    });"><i class="fab fa-facebook"></i></a>
 
 
     </div>
