--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   'event_category': 'link',
   'event_label': 'bastaCheSenti',
   });">Basta Che Senti</a>
+
+  <a href="superstar.html" onclick="gtag('event', 'click', {
+'event_category': 'link',
+'event_label': 'bastaCheSenti',
+});">Basta Che Senti</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
