--- a/superstar.html
+++ b/superstar.html
@@ -32,6 +32,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/general.css" type="text/css">
+    <link rel="stylesheet" href="css/superstar.css" type="text/css">
     <link rel="stylesheet" href="css/mobile.css" type="text/css">
     <link rel="stylesheet" href="css/large.css" type="text/css">
     <link rel="icon" href="icon/favicon.ico" type="image/x-icon"/>
