--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
   'event_label': 'bastaCheSenti',
   });">Basta Che Senti</a>
 
+  <br>
+
   <a href="superstar.html" onclick="gtag('event', 'click', {
 'event_category': 'link',
 'event_label': 'bastaCheSenti',
-});">Basta Che Senti</a>
+});">Superstar</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
