--- a/superstar.html
+++ b/superstar.html
@@ -26,6 +26,26 @@
           }
     </script>
 
+    <!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window,document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+ fbq('init', '199342478157855');
+fbq('track', 'PageView');
+</script>
+<noscript>
+ <img height="1" width="1"
+src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
+&noscript=1"/>
+</noscript>
+<!-- End Facebook Pixel Code -->
+
 
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1">
@@ -59,7 +79,7 @@
         <p>Listen on: </p>
         <i class="fas fa-chevron-down"></i>
       </div>
-      <a class="intDivLink" id="link1" target="_blank" href="https://open.spotify.com/track/31pcxsfvo1vh7NUd2BFs6o?si=AhPn7G_DTVOhlQqXuUOY-w" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link1" target="_blank" href="#" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'spotify',
     });">
@@ -68,7 +88,7 @@
         </div>
       </a>
 
-      <a class="intDivLink" id="link6" target="_blank" href="https://www.youtube.com/watch?v=F1CKN2J1Z_M" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link6" target="_blank" href="#" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'youTube',
     });">
@@ -77,7 +97,7 @@
         </div>
       </a>
 
-      <a class="intDivLink" id="link2" href="https://music.apple.com/it/album/basta-che-senti/1500668204?i=1500668205" target="_blank" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link2" href="#" target="_blank" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'appleMusic',
     });">
@@ -86,7 +106,7 @@
         </div>
       </a>
 
-      <a class="intDivLink" id="link3" target="_blank" href="https://music.amazon.it/albums/B085885BXH?ref=dm_sh_k6OePgoOV91NOiUa6u2lck3QO" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link3" target="_blank" href="#" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'amazonMusic',
     });">
@@ -97,16 +117,16 @@
 
 
 
-      <a class="intDivLink" id="link4" target="_blank" href="https://play.google.com/store/music/album?id=Bpsmly2njxbhpldhmtl4mzfyywi&tid=song-Tume6f2hxgr2qmuu6pm74ijizie&gl=IT" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link4" target="_blank" href="#" onclick="gtag('event', 'click', {
     'event_category': 'link',
-    'event_label': 'googlePlayMusic',
+    'event_label': 'tikTok',
     });">
         <div class="iconSrteam">
           <img src="img/googlePlayMusic.png" alt="">
         </div>
       </a>
 
-      <a class="intDivLink" id="link5" target="_blank" href="https://music.apple.com/it/album/basta-che-senti/1500668204?i=1500668205&app=itunes" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link5" target="_blank" href="#" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'iTunes',
     });">
