--- a/superstar.html
+++ b/superstar.html
@@ -122,7 +122,7 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
     'event_label': 'tikTok',
     });">
         <div class="iconSrteam">
-          <img src="img/googlePlayMusic.png" alt="">
+          <img src="img/tikTok.png" alt="">
         </div>
       </a>
 
