--- a/superstar.html
+++ b/superstar.html
@@ -137,11 +137,11 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
 
       <p>Follow on:</p>
 
-       <a href="https://www.instagram.com/famosopostumo/?hl=it" target="_blank" onclick="gtag('event', 'click', {
+       <a href="https://www.instagram.com/birkan__5__0__1/?hl=it" target="_blank" onclick="gtag('event', 'click', {
      'event_category': 'link',
      'event_label': 'instagram',
      });"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/famosopostumo/" target="_blank" onclick="gtag('event', 'click', {
+      <a href="https://www.facebook.com/BirkanH501-106079324196764/" target="_blank" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'facebook',
     });"><i class="fab fa-facebook"></i></a>
