--- a/superstar.html
+++ b/superstar.html
@@ -99,7 +99,7 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
       </a>
 
 
-            <a class="intDivLink" id="link4" target="_blank" href="#" onclick="gtag('event', 'click', {
+            <a class="intDivLink" id="link4" target="_blank" href="https://vm.tiktok.com/GaXeRb/" onclick="gtag('event', 'click', {
           'event_category': 'link',
           'event_label': 'tikTok',
           });">
