--- a/superstar.html
+++ b/superstar.html
@@ -79,7 +79,7 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
         <p>Listen on: </p>
         <i class="fas fa-chevron-down"></i>
       </div>
-      <a class="intDivLink" id="link1" target="_blank" href="#" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link1" target="_blank" href="https://open.spotify.com/track/5qtZYXY9OU8oby9eSCN8wD?si=8-EkX92cQDGvG7huZPDVmg" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'spotify',
     });">
@@ -89,7 +89,7 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
       </a>
 
 
-      <a class="intDivLink" id="link2" href="#" target="_blank" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link2" href="https://music.apple.com/it/album/superstar/1504520962?i=1504520964" target="_blank" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'appleMusic',
     });">
@@ -108,7 +108,7 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
               </div>
             </a>
 
-      <a class="intDivLink" id="link3" target="_blank" href="#" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link3" target="_blank" href=" https://music.amazon.it/albums/B086D2R3NL?do=play&trackAsin=B086D7JV8B&ref=dm_sh_chfFTa0J29ASpX89UZBe1xhxQ" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'amazonMusic',
     });">
@@ -120,7 +120,7 @@ src="https://www.facebook.com/tr?id=199342478157855&ev=PageView
 
 
 
-      <a class="intDivLink" id="link5" target="_blank" href="#" onclick="gtag('event', 'click', {
+      <a class="intDivLink" id="link5" target="_blank" href=" https://music.apple.com/it/album/superstar-single/1504520962" onclick="gtag('event', 'click', {
     'event_category': 'link',
     'event_label': 'iTunes',
     });">
