--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 'event_category': 'link',
 'event_label': 'bastaCheSenti',
 });">Superstar</a>
+
+<a href="superstarspotify.html" onclick="gtag('event', 'click', {
+'event_category': 'link',
+'event_label': 'bastaCheSenti',
+});">Superstar Spotify</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
