--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <br>
 
-<a href="superstarspotify.html" onclick="gtag('event', 'click', {
+<a href="superstarspotify.html" target="_blank" onclick="gtag('event', 'click', {
 'event_category': 'link',
 'event_label': 'bastaCheSenti',
 });">Superstar Spotify</a>
