--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
   <br>
 
-<a href="superstarspotify.html" target="_blank" onclick="gtag('event', 'click', {
+<a href="superstarshare.html?source=sharePaolo" target="_blank" onclick="gtag('event', 'click', {
 'event_category': 'link',
 'event_label': 'bastaCheSenti',
-});">Superstar Spotify</a>
+});">Superstar Share</a>
     <p>Ciao a tutti quanti!</p>
 
   </body>
